--- a/app/templates/atualizar_ataque.html
+++ b/app/templates/atualizar_ataque.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Ataque</title>
+    <title>Trocar {{ ataque }}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
     <link rel="shortcut icon" href="{% static 'app/img/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
-    <h1 class='titulopagina'>Ataque</h1>
+    <h1 class='titulopagina'>{{ataque}}</h1>
     <div class='meio'>
         <div class='mensagem'>
         <form method="post">
